--- a/cheat-menu.vcxproj
+++ b/cheat-menu.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="imgui\imstb_rectpack.h" />
     <ClInclude Include="imgui\imstb_textedit.h" />
     <ClInclude Include="imgui\imstb_truetype.h" />
+    <ClInclude Include="main\Settings.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main\gui.cpp" />
@@ -168,6 +169,7 @@
     <ClCompile Include="imgui\imgui_impl_win32.cpp" />
     <ClCompile Include="imgui\imgui_tables.cpp" />
     <ClCompile Include="imgui\imgui_widgets.cpp" />
+    <ClCompile Include="main\Settings.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
