--- a/cheat-menu.vcxproj
+++ b/cheat-menu.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="imgui\imstb_textedit.h" />
     <ClInclude Include="imgui\imstb_truetype.h" />
     <ClInclude Include="main\Settings.h" />
+    <ClInclude Include="nlohmann\json.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main\gui.cpp" />
