--- a/cheat-menu.vcxproj.filters
+++ b/cheat-menu.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="main\Settings.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="nlohmann\json.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="imgui\imgui.cpp">
