--- a/cheat-menu.vcxproj.filters
+++ b/cheat-menu.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="nlohmann\json.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="imgui\imgui.cpp">
@@ -89,5 +92,17 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
+    <None Include="CSGO Loader.aps" />
+    <None Include="LICENSE" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="CSGO Loader.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="icon.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
