Added Basic Argument System

--- a/cheat-menu.vcxproj
+++ b/cheat-menu.vcxproj
@@ -152,6 +152,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="main\Global.h" />
     <ClInclude Include="main\gui.h" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui.h" />
