--- a/CSGO Loader.vcxproj
+++ b/CSGO Loader.vcxproj
@@ -164,6 +164,7 @@
     <ClInclude Include="imgui\imstb_textedit.h" />
     <ClInclude Include="imgui\imstb_truetype.h" />
     <ClInclude Include="main\Settings.h" />
+    <ClInclude Include="main\Tray.h" />
     <ClInclude Include="nlohmann\json.hpp" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
@@ -179,6 +180,7 @@
     <ClCompile Include="imgui\imgui_tables.cpp" />
     <ClCompile Include="imgui\imgui_widgets.cpp" />
     <ClCompile Include="main\Settings.cpp" />
+    <ClCompile Include="main\Tray.cpp" />
     <ClCompile Include="main\Utils.cpp" />
     <ClCompile Include="main\Utils.h" />
   </ItemGroup>
